[package]
name = "poem-sea-orm-middleware"
version = "0.7.0"
edition = "2021"
authors = ["zihan <ZihanType@proton.me>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/ZihanType/poem-sea-orm-middleware"
repository = "https://github.com/ZihanType/poem-sea-orm-middleware"
description = "Sea ORM middleware for Poem web framework"
keywords = ["sea-orm", "middleware", "poem", "web"]
include = ["src/**/*", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1", default-features = false }
poem = { version = "3", default-features = false }
sea-orm = { version = "1", default-features = false }
tokio = { version = "1", default-features = false, features = ["rt"] }
thiserror = { version = "1", default-features = false }

[dev-dependencies]
poem = { version = "3", default-features = false, features = ["server"] }
sea-orm = { version = "1", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "with-uuid",
] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
